# speedcam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
speedcam/: app.py  frame.py  motion.py  speed.py  video.py
