[tool.poetry]
name = "speedcam"
version = "0.1.0"
description = ""
authors = ["Tom Liptrot <tom@ortom.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.1.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
