[tool.poetry]
name = "speedcam"
version = "0.1.0"
description = ""
authors = ["Tom Liptrot <tom@ortom.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"
fastapi = "^0.70.0"
typer = "^0.4.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.1.18"
black = {version = "^21.9b0", allow-prereleases = true}
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
speedcam = "speedcam.app:cli"
